--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,18 +1,18 @@
-.header {
-    width: 100%;
-    height: 50px;
-    background: #8080801c;
-    font-size: 30px;
-    padding-left: 15px;
+.header-tab {
+  width: 100%;
+  height: 50px;
+  background: #8080801c;
+  font-size: 30px;
+  padding-left: 15px;
 }
 
-.content {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+.content-tab {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 
-    .sidebar {
-        display: flex;
-        height: 100%;
-    }
+  .sidebar-tab {
+    display: flex;
+    height: 100%;
+  }
 }
